@@ -2,7 +2,6 @@ from __future__ import nested_scopes
 from __future__ import division
 
 import unittest
-from test import support
 
 x = 2
 def nester():
@@ -23,8 +22,5 @@ class TestFuture(unittest.TestCase):
     def test_nested_scopes(self):
         self.assertEqual(nester(), 3)
 
-def test_main():
-    support.run_unittest(TestFuture)
-
 if __name__ == "__main__":
-    test_main()
+    unittest.main()
